# Ferc-extractor

./: .gitignore  README.md  app.py  app_old.py  requirements.txt
ferc-eqr-scraper/: CONTRIBUTING.md  README.md  database.py  deploy_production.py  downloader.py  eqr_parser.py  ferc_data.db  main.py  processing_progress.json  processor.py  pyproject.toml  requirements.txt  settings.py  utils.py
ferc-eqr-scraper/examples/: Dockerfile  docker-compose.yml  init.sql  usage_examples.sh
