[project]
name = "ferc-eqr-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catalystcoop-ferc-xbrl-extractor==1.6.0",
    "click>=8.1.0",
    "libsql-experimental>=0.0.55",
    "lxml>=4.9.0",
    "psutil>=5.9.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.28.0",
    "sqlalchemy>=2.0.0",
    "tqdm>=4.64.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]
